# meetingmate

./: .env.example  .gitignore  README.md  docker-compose.yml  init.sql  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 27b4953c0a6c_create_meetings_table.py  7154c0b7510b_create_users_table.py
app/: auth.py  config.py  database.py  dependencies.py  exceptions.py  logging.py  middleware.py
app/models/: __init__.py  meeting.py  user.py
app/routers/: agent.py  auth.py  meetings.py
app/schemas/: agent.py  auth.py  meeting.py  user.py
app/services/: agent.py  embeddings.py  tools.py
examples/: README.md  sample_meeting.txt
tests/: conftest.py  test_agent.py  test_auth.py  test_exceptions.py  test_logging.py  test_meetings.py
