[project]
name = "meetingmate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=4.0.0",
    "fastapi>=0.136.1",
    "psycopg2-binary>=2.9.12",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
